--- a/chrome/browser/resources/md_history/history_item.html
+++ b/chrome/browser/resources/md_history/history_item.html
@@ -7,9 +7,11 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-styles/shadow.html">
 <link rel="import" href="chrome://resources/html/util.html">
+<link rel="import" href="chrome://history/shared_style.html">
 
 <dom-module id="history-item">
   <template>
+    <style include="shared-style"></style>
     <style>
       :host {
         @apply(--layout-center);
@@ -19,11 +21,11 @@
 
       #main-container {
         background: #fff;
-        border-color: rgba(0, 0, 0, 0.14);
+        border-color: var(--card-border-color);
         border-style: solid;
         border-width: 0 1px;
-        max-width: 960px;
-        min-width: 500px;
+        max-width: var(--card-max-width);
+        min-width: var(--card-min-width);
         width: 100%;
       }
 
@@ -41,16 +43,7 @@
       }
 
       :host([is-card-start]) #date-accessed {
-        @apply(--layout-center);
-        @apply(--layout-horizontal);
-        -webkit-padding-start: 20px;
-        background: #fafafa;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.14);
-        border-radius: 2px 2px 0 0;
-        color: #333;
-        font-size: 14px;
-        font-weight: 500;
-        height: 48px;
+        display: flex;
       }
 
       #item-container {
@@ -67,7 +60,7 @@
         padding-bottom: 8px;
       }
 
-      #titleAndDomain {
+      #title-and-domain {
         @apply(--layout-center);
         @apply(--layout-flex);
         @apply(--layout-horizontal);
@@ -85,38 +78,15 @@
         width: 16px;
       }
 
-      #time {
+      #time-accessed {
         color: #646464;
         min-width: 96px;
-      }
-
-      #title {
-        color: #333;
-        overflow: hidden;
-        text-decoration: none;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-
-      #title:hover {
-        text-decoration: underline;
       }
 
       #domain {
         -webkit-margin-start: 16px;
         color: #969696;
         flex-shrink: 0;
-      }
-
-      iron-icon {
-        --iron-icon-height: 16px;
-        --iron-icon-width: 16px;
-      }
-
-      #website-icon {
-        -webkit-margin-end: 16px;
-        height: 16px;
-        min-width: 16px;
       }
 
       #menu-button {
@@ -128,7 +98,9 @@
         width: 36px;
       }
 
-      #bookmark {
+      #bookmark-star {
+        --iron-icon-height: 16px;
+        --iron-icon-width: 16px;
         -webkit-margin-end: 10px;
         -webkit-margin-start: 20px;
         color: rgb(68, 136, 255);
@@ -143,18 +115,20 @@
       }
     </style>
     <div id="main-container">
-      <div id="date-accessed">[[historyDate]]</div>
+      <div id="date-accessed" class="card-title">[[historyDate]]</div>
       <div id="item-container">
         <paper-checkbox id="checkbox" on-tap="onCheckboxSelected_"
             checked="{{selected}}" disabled="[[selectionNotAllowed_()]]">
         </paper-checkbox>
-        <span id="time">{{timeAccessed}}</span>
-        <div id="website-icon"></div>
-        <div id="titleAndDomain">
-          <a href$="{{websiteUrl}}" id="title">{{websiteTitle}}</a>
+        <span id="time-accessed">{{timeAccessed}}</span>
+        <div class="website-icon" id="icon"></div>
+        <div id="title-and-domain">
+          <a href$="{{websiteUrl}}" id="title" class="website-title">
+            {{websiteTitle}}
+          </a>
           <span id="domain">{{websiteDomain}}</span>
         </div>
-        <iron-icon icon="star" id="bookmark"></iron-icon>
+        <iron-icon icon="star" id="bookmark-star"></iron-icon>
         <paper-icon-button icon="more-vert" id="menu-button"
             on-tap="onMenuButtonTap_">
         </paper-icon-button>
