--- a/chrome/browser/resources/settings/settings_shared_css.html
+++ b/chrome/browser/resources/settings/settings_shared_css.html
@@ -11,11 +11,13 @@
   <template>
     <style>
       h2 {
+        @apply(--layout-center);
         color: var(--paper-grey-500);
+        display: flex;
         font-size: 100%;
-        font-weight: normal;
-        margin-bottom: 20px;
-        margin-top: 30px;
+        font-weight: 500;
+        margin: 0;
+        min-height: 40px;
       }
 
       iron-icon {
