MD Settings: fix "Add search engine" link regression
Also tweaks primary button colors (as they should be the same as tertiary).

R=dpapad@chromium.org
BUG=479359

Review URL: https://codereview.chromium.org/1725183002

Cr-Commit-Position: refs/heads/master@{#377315}

--- a/chrome/browser/resources/settings/settings_shared_css.html
+++ b/chrome/browser/resources/settings/settings_shared_css.html
@@ -41,9 +41,24 @@
         -webkit-margin-start: 4px;
       }
 
+      [is='action-link'],
+      [is='action-link']:active,
+      [is='action-link']:hover,
+      [is='action-link']:visited,
+      paper-button.primary-button {
+        /* TODO(dbeam): change all other colors in this file into --google or
+         * --paper where applicable. */
+        color: var(--google-blue-700);
+      }
+
+      [is='action-link']:hover {
+        /* TODO(dbeam): check with bettes@ on this one, but I'm pretty sure we
+         * shouldn't be showing much :hover stuff on Polymer pages. */
+        text-decoration: none;
+      }
+
       paper-button.primary-button {
         --paper-button: {
-          color: rgb(66, 133, 244);
           font-weight: 500;
           text-align: start;
         };
