--- a/chrome/browser/resources/settings/search_engines_page/search_engines_page.html
+++ b/chrome/browser/resources/settings/search_engines_page/search_engines_page.html
@@ -27,11 +27,16 @@
     </template>
     <div>
       <div class="label" i18n-content="searchEnginesOther"></div>
-      <a is="action-link" i18n-content="searchEnginesAddSearchEngine"
-          on-tap="onAddSearchEngineTap_" id="addSearchEngine"></a>
+      <!-- TODO(dbeam): why does on-click work with keyboard but on-tap
+           doesn't? -->
+      <div class="label">
+        <a is="action-link" i18n-content="searchEnginesAddSearchEngine"
+            on-tap="onAddSearchEngineTap_" id="addSearchEngine"></a>
+      </div>
       <settings-search-engines-list engines="[[otherEngines]]">
       </settings-search-engines-list>
     </div>
   </template>
+  <link rel="import" type="css" href="chrome://resources/css/action_link.css">
   <script src="search_engines_page.js"></script>
 </dom-module>
