MD Settings: fix padding on "Add new search engine" link
This is accomplished by putting the link inside of the list, so it has
similar padding.

R=dpapad@chromium.org
BUG=479359

Review URL: https://codereview.chromium.org/1736633003

Cr-Commit-Position: refs/heads/master@{#377473}

--- a/chrome/browser/resources/settings/search_engines_page/search_engines_list.html
+++ b/chrome/browser/resources/settings/search_engines_page/search_engines_list.html
@@ -5,6 +5,7 @@
   <link rel="import" type="css" href="search_engines_list.css">
   <template>
     <div>
+      <content></content>
       <template is="dom-repeat" items="[[engines]]">
         <settings-search-engine-entry engine="[[item]]">
         </settings-search-engine-entry>
