[Media Router] Show user email in header if cloud sink is present.
BUG=570797

Review URL: https://codereview.chromium.org/1680743006

Cr-Commit-Position: refs/heads/master@{#377582}

--- a/chrome/browser/resources/media_router/elements/media_router_container/media_router_container.html
+++ b/chrome/browser/resources/media_router/elements/media_router_container/media_router_container.html
@@ -119,10 +119,12 @@
               </div>
               <div>
                 <div class="sink-text">
-                  <span dir="auto">[[item.name]]</span>
+                  <span dir="auto" class="sink-name" title="[[item.name]]">
+                    [[item.name]]
+                  </span>
                   <template is="dom-if"
                       if="[[!computeSinkDomainHidden_(item)]]">
-                    <span class="sink-domain">
+                    <span class="sink-domain" title="[[item.domain]]">
                       [[item.domain]]
                     </span>
                   </template>
