--- a/chrome/browser/resources/settings/search_engines_page/omnibox_extension_entry.html
+++ b/chrome/browser/resources/settings/search_engines_page/omnibox_extension_entry.html
@@ -1,5 +1,4 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
-<link rel="import" href="chrome://md-settings/search_engines_page/search_engine_dialog.html">
 <link rel="import" href="chrome://md-settings/search_engines_page/search_engines_browser_proxy.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-dropdown/iron-dropdown.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-icon/iron-icon.html">
@@ -8,32 +7,19 @@
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-item/paper-item.html">
 <link rel="import" href="chrome://md-settings/settings_shared_css.html">
 
-<dom-module id="settings-search-engine-entry">
+<dom-module id="settings-omnibox-extension-entry">
   <link rel="import" type="css" href="chrome://md-settings/search_engines_page/search_engine_entry.css">
   <template>
     <style include="settings-shared"></style>
     <style>
-      :host([is-default]) {
-        font-weight: 500;
-      }
-
-      .name-column,
-      .keyword-column {
+      .name-column {
         flex: 3;
       }
 
-      .url-column {
-        flex: 4;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+      .keyword-column {
+        flex: 7;
       }
     </style>
-
-    <template is="dom-if" if="[[showEditSearchEngineDialog_]]" restamp>
-      <settings-search-engine-dialog model="[[engine]]">
-      </settings-search-engine-dialog>
-    </template>
     <div id="container" class="list-item">
       <div class="name-column">
         <span class="icon-container">
@@ -47,23 +33,18 @@
         <span class="name">[[engine.displayName]]</span>
       </div>
       <div class="keyword-column">[[engine.keyword]]</div>
-      <div class="url-column">[[engine.url]]</div>
         <paper-icon-button icon="more-vert" toggles active="{{editMenuOpened}}">
         </paper-icon-button>
         <iron-dropdown opened="{{editMenuOpened}}" horizontal-align="right"
             vertical-align="top">
           <div class="dropdown-content">
-            <paper-item on-tap="onMakeDefaultTap_"
-                i18n-content="searchEnginesMakeDefault"
-                hidden="[[engine.default]]" id="makeDefault"></paper-item>
-            <paper-item on-tap="onEditTap_"
-                i18n-content="searchEnginesEdit" id="edit"></paper-item>
-            <paper-item on-tap="onDeleteTap_"
-                i18n-content="searchEnginesRemoveFromList"
-                hidden="[[engine.default]]" id="delete"></paper-item>
+            <paper-item on-tap="onManageTap_" id="manage"
+                i18n-content="searchEnginesManageExtension"></paper-item>
+            <paper-item on-tap="onDisableTap_"  id="disable"
+                i18n-content="disable"></paper-item>
           <div>
         </iron-dropdown>
     </div>
   </template>
-  <script src="search_engine_entry.js"></script>
+  <script src="omnibox_extension_entry.js"></script>
 </dom-module>
