--- a/chrome/browser/resources/settings/search_engines_page/search_engines_page.html
+++ b/chrome/browser/resources/settings/search_engines_page/search_engines_page.html
@@ -6,6 +6,7 @@
 <link rel="import" href="chrome://md-settings/search_engines_page/search_engines_browser_proxy.html">
 <link rel="import" href="chrome://md-settings/search_engines_page/search_engine_dialog.html">
 <link rel="import" href="chrome://md-settings/search_engines_page/search_engines_list.html">
+<link rel="import" href="chrome://md-settings/search_engines_page/omnibox_extension_entry.html">
 <link rel="import" href="chrome://md-settings/settings_shared_css.html">
 <link rel="import" href="chrome://md-settings/web_ui_listener_behavior.html">
 <link rel="import" href="chrome://resources/html/action_link.html">
@@ -13,8 +14,15 @@
 <dom-module id="settings-search-engines-page">
   <template>
     <style include="settings-shared">
+      :host {
+        --search-engines-list-item-vertical-space: 8px;
+        --search-engines-list-margin: 0 40px;
+      }
       .label {
         margin: 20px;
+      }
+      .extension-engines {
+        margin: var(--search-engines-list-margin);
       }
     </style>
     <div>
@@ -33,6 +41,16 @@
         <a is="action-link" i18n-content="searchEnginesAddSearchEngine"
             on-tap="onAddSearchEngineTap_" id="addSearchEngine"></a>
       </settings-search-engines-list>
+
+      <template is="dom-if" if="[[showExtensionsList_]]">
+        <div class="label" i18n-content="searchEnginesExtension"></div>
+        <div class="extension-engines">
+          <template is="dom-repeat" items="[[extensions]]">
+            <settings-omnibox-extension-entry engine="[[item]]">
+            </settings-omnibox-extension-entry>
+          </template>
+        </div>
+      </template>
     </div>
   </template>
   <link rel="import" type="css" href="chrome://resources/css/action_link.css">
