Modifying Autofill common prefix logic to discard short field names.
Split from https://codereview.chromium.org/1727803002

BUG=580801

Review URL: https://codereview.chromium.org/1729893003

Cr-Commit-Position: refs/heads/master@{#377763}

--- a/chrome/test/data/autofill/heuristics/input/099_checkout_address2lines.html
+++ b/chrome/test/data/autofill/heuristics/input/099_checkout_address2lines.html
@@ -4,7 +4,7 @@
   Line 1: <input type="text" name="addressLineOne"><br>
   Line 2: <input type="text" name="addressLineTwo"><br>
   City: <input type="text" name="city"><br>
-  State: <select name="state"
+  State: <select name="state">
     <option value="CA">CA</option>
     <option value="MA">MA</option>
     <option value="NY">NY</option>
