MD Settings: Manage search engines, respect edit restrictions.
Some search engines,
 - should not be editable at all.
 - are editable except for the URL field.
 - can't be marked as the default one.
 - can't be deleted.

BUG=479359

Review URL: https://codereview.chromium.org/1738003002

Cr-Commit-Position: refs/heads/master@{#377811}

--- a/chrome/browser/resources/settings/search_engines_page/search_engine_dialog.html
+++ b/chrome/browser/resources/settings/search_engines_page/search_engine_dialog.html
@@ -30,7 +30,8 @@
             </paper-input>
             <paper-input always-float-label id="queryUrl"
                 i18n-values="label:searchEnginesQueryURLExplanation;error-message:searchEnginesNotValid"
-                value="{{queryUrl_}}" on-focus="validate_" on-input="validate_">
+                value="{{queryUrl_}}" on-focus="validate_" on-input="validate_"
+                disabled$="[[model.urlLocked]]">
             </paper-input>
           </div>
           <div class="button-container">
