--- a/chrome/browser/resources/settings/search_engines_page/search_engine_entry.html
+++ b/chrome/browser/resources/settings/search_engines_page/search_engine_entry.html
@@ -55,12 +55,13 @@
           <div class="dropdown-content">
             <paper-item on-tap="onMakeDefaultTap_"
                 i18n-content="searchEnginesMakeDefault"
-                hidden="[[engine.default]]" id="makeDefault"></paper-item>
+                hidden$="[[!engine.canBeDefault]]" id="makeDefault"></paper-item>
             <paper-item on-tap="onEditTap_"
-                i18n-content="searchEnginesEdit" id="edit"></paper-item>
+                i18n-content="searchEnginesEdit"
+                hidden$="[[!engine.canBeEdited]]" id="edit"></paper-item>
             <paper-item on-tap="onDeleteTap_"
                 i18n-content="searchEnginesRemoveFromList"
-                hidden="[[engine.default]]" id="delete"></paper-item>
+                hidden$="[[!engine.canBeRemoved]]" id="delete"></paper-item>
           <div>
         </iron-dropdown>
     </div>
