Set wallpaper from right click menu in Files app.
BUG=578935
TEST=manually

Review URL: https://codereview.chromium.org/1679983003

Cr-Commit-Position: refs/heads/master@{#377814}

--- a/ui/file_manager/file_manager/main.html
+++ b/ui/file_manager/file_manager/main.html
@@ -94,6 +94,8 @@
       <command id="open-with" i18n-values="label:OPEN_WITH_BUTTON_LABEL">
       <command id="zip-selection"
                i18n-values="label:ZIP_SELECTION_BUTTON_LABEL">
+      <command id="set-wallpaper"
+               i18n-values="label:SET_WALLPAPER_BUTTON_LABEL">
 
       <command id="share" i18n-values="label:SHARE_BUTTON_LABEL" disabled hidden
                shortcut="U+00BE" hide-shortcut-text><!-- Shortcut: '.' -->
@@ -134,6 +136,7 @@
       <cr-menu-item command="#rename"></cr-menu-item>
       <cr-menu-item command="#delete" i18n-content="DELETE_BUTTON_LABEL"></cr-menu-item>
       <cr-menu-item command="#zip-selection"></cr-menu-item>
+      <cr-menu-item command="#set-wallpaper"></cr-menu-item>
       <hr visibleif="saveas-file full-page">
       <cr-menu-item command="#new-folder"
                 visibleif="saveas-file full-page"></cr-menu-item>
