--- a/chrome/browser/resources/chromeos/login/unrecoverable_cryptohome_error_card.html
+++ b/chrome/browser/resources/chromeos/login/unrecoverable_cryptohome_error_card.html
@@ -3,7 +3,7 @@
      found in the LICENSE file. -->
 
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-flex-layout/classes/iron-flex-layout.html">
-<link rel="import" href="chrome://resources/polymer/v1_0/iron-icons/iron-icons.html">
+<link rel="import" href="chrome://resources/polymer/v1_0/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/polymer/polymer.html">
 
 <!--
@@ -13,35 +13,30 @@
   the device could still be used.
 
   Attributes:
-    'email' - displayed email in header
+    'shouldSendFeedback' - Whether to send feedback
 
   Events:
-    'sendFeedbackAndRecreate' - fired when user clicks on send feedkback button.
-    'recreate' - fired when user clicks on re-create cryptohome button.
+    'done' - fired when user clicks on continue button.
 -->
 <dom-module name="unrecoverable-cryptohome-error-card">
   <link rel="stylesheet" href="unrecoverable_cryptohome_error_card.css">
 
   <template>
-    <gaia-card class="fit">
-      <gaia-header class="header" email="[[email]]">
-      </gaia-header>
-      <div class="footer">
-        <div class="gaia-body-text horizontal layout">
-          <iron-icon icon="warning"></iron-icon>
-          <p i18n-values=".innerHTML:unrecoverableCryptohomeErrorMessage"
-              class="flex">
-          </p>
-        </div>
-        <div class="horizontal layout justified center">
-          <gaia-button on-tap="onRecreateClicked_"
-              i18n-content="unrecoverableCryptohomeErrorContinue">
-          </gaia-button>
-          <gaia-button on-tap="onSendFeedbackAndRecreateClicked_"
-              i18n-content="unrecoverableCryptohomeErrorSendFeedback">
-          </gaia-button>
-        </div>
+    <div class="content">
+      <div class="gaia-body-text horizontal layout center">
+        <p i18n-content="unrecoverableCryptohomeErrorMessage" class="flex">
+        </p>
       </div>
-    </gaia-card>
+      <p>
+        <paper-checkbox id="sendFeedback" checked="{{shouldSendFeedback}}">
+          <span i18n-content="unrecoverableCryptohomeErrorSendFeedback"></span>
+        </paper-checkbox>
+      </p>
+      <div class="horizontal-reverse layout justified center">
+        <gaia-button on-tap="onContinueClicked_"
+            i18n-content="unrecoverableCryptohomeErrorContinue">
+        </gaia-button>
+      </div>
+    </div>
   </template>
 </dom-module>
