MD Settings: Fix <settings-dialog> resizing behavior.
BUG=598038

Review URL: https://codereview.chromium.org/1854303003

Cr-Commit-Position: refs/heads/master@{#385211}

--- a/chrome/browser/resources/settings/settings_dialog.html
+++ b/chrome/browser/resources/settings/settings_dialog.html
@@ -36,6 +36,7 @@
       :host {
         max-width: 800px;
         min-width: 500px;
+        overflow: auto;
       }
 
       :host ::content .body {
