[Media Router WebUI] Move dialog load focusing to container.
This ensures the first run flow is taken into account, since those elements may appear before the header elements in the DOM tree.

Manually tested on Linux/Mac.

BUG=598278

Review URL: https://codereview.chromium.org/1856553002

Cr-Commit-Position: refs/heads/master@{#385213}

--- a/chrome/browser/resources/media_router/elements/media_router_container/media_router_container.html
+++ b/chrome/browser/resources/media_router/elements/media_router_container/media_router_container.html
@@ -18,6 +18,7 @@
   <link rel="import" type="css" href="../../media_router_common.css">
   <link rel="import" type="css" href="media_router_container.css">
   <template>
+    <div id="focus-placeholder" tabindex="0"></div>
     <template is="dom-if"
         if="[[computeShowFirstRunFlow_(showFirstRunFlow, currentView_)]]">
       <div id="first-run-flow">
