Settings People Revamp: Fix Mange Profile empty name crash.
Prevents sending an empty string name to C++.

BUG=597868,599842

Review URL: https://codereview.chromium.org/1857203003

Cr-Commit-Position: refs/heads/master@{#385305}

--- a/chrome/browser/resources/settings/people_page/manage_profile.html
+++ b/chrome/browser/resources/settings/people_page/manage_profile.html
@@ -10,7 +10,7 @@
     <style include="settings-shared"></style>
     <div class="settings-box first">
       <paper-input value="{{profileName}}" pattern=".*\S.*" auto-validate
-          on-blur="onProfileNameChanged_">
+          required on-change="onProfileNameChanged_">
       </paper-input>
       <div id="availableIcons">
         <template is="dom-repeat" items="[[availableIconUrls]]">
