Handle the button presses in the password edit dialog.
CL includes tests for this element.

BUG=595538

Review URL: https://codereview.chromium.org/1822913003

Cr-Commit-Position: refs/heads/master@{#385331}

--- a/chrome/browser/resources/settings/passwords_and_forms_page/password_edit_dialog.html
+++ b/chrome/browser/resources/settings/passwords_and_forms_page/password_edit_dialog.html
@@ -25,25 +25,29 @@
     <settings-dialog id="dialog">
       <div class="title" i18n-content="editPasswordTitle"></div>
       <div class="body">
-        <paper-input i18n-values="label:editPasswordWebsiteLabel"
+        <paper-input id="websiteInput"
+            i18n-values="label:editPasswordWebsiteLabel"
             value="[[item.loginPair.originUrl]]">
         </paper-input>
-        <paper-input i18n-values="label:editPasswordUsernameLabel"
+        <paper-input id="usernameInput"
+            i18n-values="label:editPasswordUsernameLabel"
             value="[[item.loginPair.username]]">
         </paper-input>
         <div id="passwordGroup">
-          <paper-input i18n-values="label:editPasswordPasswordLabel"
-              type="password"
-              value="[[getEmptyPassword_(item.numCharactersInPassword)]]">
+          <paper-input id="passwordInput"
+              i18n-values="label:editPasswordPasswordLabel"
+              type="[[getPasswordInputType_(password)]]"
+              value="[[getPassword_(item, password)]]">
           </paper-input>
-          <!-- TODO(hcarmona): add on-tap -->
-          <paper-icon-button icon="icons:visibility"></paper-icon-button>
+          <paper-icon-button id="showPasswordButton" icon="icons:visibility"
+              on-tap="onShowPasswordButtonTap_"></paper-icon-button>
         </div>
       </div>
       <div class="button-container">
-        <!-- TODO(hcarmona): add on-tap for both buttons -->
-        <paper-button i18n-content="cancel"></paper-button>
-        <paper-button class="action-button" i18n-content="save"></paper-button>
+        <paper-button id="cancelButton" i18n-content="cancel"
+            on-tap="onCancelButtonTap_"></paper-button>
+        <paper-button id="saveButton" class="action-button" i18n-content="save"
+            on-tap="onSaveButtonTap_"></paper-button>
       </div>
     </settings-dialog>
   </template>
