--- a/chrome/browser/resources/settings/passwords_and_forms_page/passwords_and_forms_page.html
+++ b/chrome/browser/resources/settings/passwords_and_forms_page/passwords_and_forms_page.html
@@ -38,7 +38,7 @@
       <template is="dom-if" name="manage-passwords">
         <settings-subpage page-title="[[i18n('passwords')]]">
           <passwords-section saved-passwords="[[savedPasswords]]"
-              password-exceptions="[[passwordExceptions]]">
+              id="passwordSection" password-exceptions="[[passwordExceptions]]">
           </passwords-section>
         </settings-subpage>
       </template>
