Convert Site Details to settings-subpage.
BUG=597314, 543635

Review URL: https://codereview.chromium.org/1863623002

Cr-Commit-Position: refs/heads/master@{#385438}

--- a/chrome/browser/resources/settings/privacy_page/privacy_page.html
+++ b/chrome/browser/resources/settings/privacy_page/privacy_page.html
@@ -215,13 +215,12 @@
         </settings-subpage>
       </template>
 
-      <!-- TODO(finnur): switch to settings-subpage (crbug.com/597314). -->
-      <neon-animatable id="site-details">
-        <site-details
-            site="{{selectedSite}}"
-            current-route="{{currentRoute}}">
-        </site-details>
-      </neon-animatable>
+      <template is="dom-if" name="site-details">
+        <settings-subpage
+            page-title="[[i18n('siteSettingsSiteDetailsPageTitle')]]">
+          <site-details site="[[selectedSite]]"></site-details>
+        </settings-subpage>
+      </template>
     </settings-animated-pages>
   </template>
   <script src="privacy_page.js"></script>
