--- a/content/test/data/gpu/pixel_canvas2d_webgl.html
+++ b/content/test/data/gpu/pixel_canvas2d_webgl.html
@@ -46,6 +46,8 @@ function main()
     return;
   }
 
+  gl.viewport(0, 0, 50, 50);
+
   waitForFinish();
 }
 
@@ -64,14 +66,14 @@ function waitForFinish()
 </script>
 </head>
 <body onload="main()">
-<div style="position:relative; width:400px; height:400px; background-color:black">
+<div style="position:relative; width:300px; height:300px; background-color:black">
 </div>
 <div id="container" style="position:absolute; top:0px; left:0px">
+<canvas id="c2" width="50" height="50" class="nomargin"></canvas>
 <!--
 Canvas acceleration requires that the canvas be at least 256x257.
 -->
 <canvas id="c" width="300" height="300" class="nomargin"></canvas>
-<canvas id="c2" width="300" height="300" class="nomargin"></canvas>
 </div>
 </body>
 </html>
