--- a/chrome/browser/resources/settings/device_page/device_page.html
+++ b/chrome/browser/resources/settings/device_page/device_page.html
@@ -1,10 +1,10 @@
-<link rel="import" href="chrome://resources/html/i18n_behavior.html">
 <link rel="import" href="chrome://resources/html/polymer.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-icon/iron-icon.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-icons/hardware-icons.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-icons/image-icons.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/neon-animation/neon-animatable.html">
 <link rel="import" href="chrome://md-settings/controls/settings_dropdown_menu.html">
+<link rel="import" href="chrome://md-settings/device_page/display.html">
 <link rel="import" href="chrome://md-settings/device_page/keyboard.html">
 <link rel="import" href="chrome://md-settings/device_page/touchpad.html">
 <link rel="import" href="chrome://md-settings/i18n_setup.html">
@@ -19,25 +19,33 @@
     <settings-animated-pages id="pages" section="device"
         current-route="{{currentRoute}}">
       <neon-animatable id="main">
-        <div id="touchpadRow" class="settings-box first"
-            on-tap="onTouchpadTap_">
+        <div class="settings-box first" on-tap="onTouchpadTap_">
           <!-- TODO(michaelpg): Get a touchpad icon. -->
           <iron-icon icon="image:brightness-1"></iron-icon>
-          <div class="middle">[[i18n('touchpadTitle')]]</div>
+          <div class="middle">$i18n{touchpadTitle}</div>
         </div>
         <div id="keyboardRow" class="settings-box" on-tap="onKeyboardTap_">
           <iron-icon icon="hardware:keyboard"></iron-icon>
-          <div class="middle">[[i18n('keyboardTitle')]]</div>
+          <div class="middle">$i18n{keyboardTitle}</div>
+        </div>
+        <div id="displayRow" class="settings-box" on-tap="onDisplayTap_">
+          <iron-icon icon="hardware:desktop-windows"></iron-icon>
+          <div class="middle">$i18n{displayTitle}</div>
         </div>
       </neon-animatable>
       <template is="dom-if" name="touchpad">
-        <settings-subpage page-title="[[i18n('touchpadTitle')]]">
+        <settings-subpage page-title="$i18n{touchpadTitle}">
           <settings-touchpad prefs="{{prefs}}"></settings-touchpad>
         </settings-subpage>
       </template>
       <template is="dom-if" name="keyboard">
-        <settings-subpage page-title="[[i18n('keyboardTitle')]]">
+        <settings-subpage page-title="$i18n{keyboardTitle}">
           <settings-keyboard prefs="{{prefs}}"></settings-keyboard>
+        </settings-subpage>
+      </template>
+      <template is="dom-if" name="display">
+        <settings-subpage page-title="$i18n{displayTitle}">
+          <settings-display></settings-display>
         </settings-subpage>
       </template>
     </settings-animated-pages>
