[MD settings] change OnStartup settings to use $i18n replacement
This CL converts OnStartup settings to use $i18n rather than
i18n-content or i18n-values.

BUG=506009

Review URL: https://codereview.chromium.org/1802843002

Cr-Commit-Position: refs/heads/master@{#385560}

--- a/chrome/browser/resources/settings/on_startup_page/on_startup_page.html
+++ b/chrome/browser/resources/settings/on_startup_page/on_startup_page.html
@@ -12,14 +12,14 @@
     <div class="settings-box block first">
       <settings-radio-group id="onStartupRadioGroup"
           pref="{{prefs.session.restore_on_startup}}">
-        <paper-radio-button name="[[prefValues_.OPEN_NEW_TAB]]"
-            i18n-content="onStartupOpenNewTab">
+        <paper-radio-button name="[[prefValues_.OPEN_NEW_TAB]]">
+          $i18n{onStartupOpenNewTab}
         </paper-radio-button>
-        <paper-radio-button name="[[prefValues_.CONTINUE]]"
-            i18n-content="onStartupContinue">
+        <paper-radio-button name="[[prefValues_.CONTINUE]]">
+          $i18n{onStartupContinue}
         </paper-radio-button>
-        <paper-radio-button name="[[prefValues_.OPEN_SPECIFIC]]"
-            i18n-content="onStartupOpenSpecific">
+        <paper-radio-button name="[[prefValues_.OPEN_SPECIFIC]]">
+          $i18n{onStartupOpenSpecific}
         </paper-radio-button>
       </settings-radio-group>
     </div>
