MD Settings: Certificate manager, implement importing CA certificate.
BUG=600813

Review URL: https://codereview.chromium.org/1863733003

Cr-Commit-Position: refs/heads/master@{#385605}

--- a/chrome/browser/resources/settings/certificate_manager_page/ca_trust_edit_dialog.html
+++ b/chrome/browser/resources/settings/certificate_manager_page/ca_trust_edit_dialog.html
@@ -12,6 +12,7 @@
     <style include="settings-shared">
       paper-checkbox {
         display: block;
+        margin: 15px 0;
       }
     </style>
 
